added sorting on getAllCustomers
